--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<title>Basic 89</title>
+<title>Cypher</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
-<!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
 </head>
 <body>
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">ENGAGEMENT PROGRAM</a></h1>
+      <h1><a>ENGAGEMENT PROGRAM</a></h1>
       <h2>HERA LABS</h2>
     </div>
     <nav>
       <ul>
-    
-        <li><a href="#">Sign Up</a></li>
-        <li><a href="#">Log In</a></li>
+
+        <a>If you already have an account </a>
+        <input type="submit" onclick="location.href='login.html';" value="Log in" />
 
       </ul>
     </nav>
@@ -27,112 +26,24 @@
 <div class="wrapper row2">
   <div id="container" class="clear">
     <!-- Slider -->
-    <section id="slider"><a href="#"><img src="headpic.png" alt=""></a></section>
+    <section id="slider"><a href="#"><img src="busines.jpg" alt=""></a></section>
     <!-- main content -->
-    <div id="homepage">
-      <!-- services area -->
-      <section id="services" class="clear">
-        <article class="one_quarter">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt="pic"></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-        <article class="one_quarter lastbox">
-          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
-          <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
-          <p class="more"><a href="#">Read More &raquo;</a></p>
-        </article>
-      </section>
-      <!-- / services area -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- / latest work -->
-      <section id="latest">
-        <article>
-          <figure>
-            <ul class="clear">
-              <li class="one_third"><img src="images/demo/290x180.gif" width="290" height="180" alt=""></li>
-              <li class="one_third"><img src="images/demo/290x180.gif" width="290" height="180" alt=""></li>
-              <li class="one_third lastbox"><img src="images/demo/290x180.gif" width="290" height="180" alt=""></li>
-            </ul>
-            <figcaption><a href="#">View All Our Recent Work Here &raquo;</a></figcaption>
-          </figure>
-        </article>
-      </section>
-      <!-- / latest work -->
-    </div>
-    <!-- main content -->
-    <div id="content">
-      <section id="posts" class="last clear">
-        <ul>
-          <li>
-            <article class="clear">
-              <figure><img src="images/demo/180x150.gif" alt="">
-                <figcaption>
-                  <h2>Indonectetus facilis leo nibh</h2>
-                  <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
-                  <footer class="more"><a href="#">Read More &raquo;</a></footer>
-                </figcaption>
-              </figure>
-            </article>
-          </li>
-          <li class="last">
-            <article class="clear">
-              <figure><img src="images/demo/180x150.gif" alt="">
-                <figcaption>
-                  <h2>Indonectetus facilis leo nibh</h2>
-                  <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>.</p>
-                  <footer class="more"><a href="#">Read More &raquo;</a></footer>
-                </figcaption>
-              </figure>
-            </article>
-          </li>
-        </ul>
-      </section>
-    </div>
-    <!-- right column -->
-    <aside id="right_column">
-      <h2 class="title">Categories</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Free Website Templates</a></li>
-          <li><a href="#">Free CSS Templates</a></li>
-          <li><a href="#">Free XHTML Templates</a></li>
-          <li><a href="#">Free Web Templates</a></li>
-          <li><a href="#">Free Website Layouts</a></li>
-          <li><a href="#">Free HTML 5 Templates</a></li>
-          <li><a href="#">Free Webdesign Templates</a></li>
-          <li><a href="#">Free FireWorks Templates</a></li>
-          <li><a href="#">Free PNG Templates</a></li>
-          <li class="last"><a href="#">Free Website Themes</a></li>
-        </ul>
-      </nav>
-      <!-- /nav -->
-    </aside>
-    <!-- / content body -->
-  </div>
-</div>
+
+
+              <!-- graphs -->
+             <div class='tableauPlaceholder' id='viz1540073919597' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pa&#47;Page1_12&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Page1_12&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pa&#47;Page1_12&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1540073919597');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='700px';vizElement.style.height='1027px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+            <!-- GRAPHS -->
+            <br>
+            <a>The ideal user has 78% more profit than a non-engagement program user. It is guaranteed that you will increase profit with this program. Anyone is able to join if they are 18 years or older and female.</a>
+            <br>
+<h2>Ready to begin your Engagement Program?</h2>
+<input type="submit" onclick="location.href='signup.html';" value="Sign up" />
+
 <!-- Footer -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    <p>Hera Labs Business Accelerator Innovation for Women</p>
   </footer>
 </div>
 </body>
